修改云存储逻辑

--- a/JiaoBaoYun-hb/html/cloud/cloud_home.html
+++ b/JiaoBaoYun-hb/html/cloud/cloud_home.html
@@ -388,7 +388,7 @@
 
 				//				events.preload("../homework/homework-tea.html", 300);
 				events.preload('storage_main.html', 300); //预加载云存储
-
+				events.preload('storage_transport.html'); //预加载传输列表
 				events.addTap('add', function() {
 					mui('#topPopover').popover('toggle')
 				})
