--- a/JiaoBaoYun-hb/html/cloud/storage_upload.html
+++ b/JiaoBaoYun-hb/html/cloud/storage_upload.html
@@ -1,4 +1,9 @@
-<!doctype html>
+<!--
+	作者：444811716@qq.com
+	时间：2016-10-20
+	描述：从本地上传文件
+-->
+<!DOCTYPE html>
 <html>
 
 	<head>
@@ -9,11 +14,6 @@
 		<link rel="stylesheet" href="../../css/utils/common.css" />
 		<link rel="stylesheet" href="../../css/iconfont/iconfont.css" />
 		<link rel="stylesheet" href="../../css/cloud/file.css" />
-		<script src="../../js/mui.min.js"></script>
-		<script type="text/javascript" src="../../js/utils/events.js"></script>
-		<script type="text/javascript" src="../../js/cloud/cloud.js"></script>
-		<script type="text/javascript" src="../../js/cloud/AndroidFileSystem.js"></script>
-		<script type="text/javascript" src="../../js/publicProtocol.js"></script>
 		<style>
 			.mui-control-item {
 				background: #F5F5F5;
@@ -29,14 +29,6 @@
 
 			.iconfont-size {
 				font-size: 42px;
-			}
-			/*.mui-bar-nav~ .mui-content .mui-pull-top-pocket {
-				top: 90px !important;
-			}*/
-
-			body,
-			.mui-content {
-				/*background: white;*/
 			}
 
 			.mui-table-view:before,
@@ -56,7 +48,6 @@
 
 			.icon-download,
 			.icon-trash {
-				/*background: red;*/
 				text-align: center;
 				min-width: 40px;
 			}
@@ -131,34 +122,22 @@
 					</div>
 				</div>-->
 			</div>
-
 		</div>
+		<script src="../../js/mui.min.js"></script>
+		<script type="text/javascript" src="../../js/utils/events.js"></script>
+		<script type="text/javascript" src="../../js/cloud/cloud.js"></script>
+		<script type="text/javascript" src="../../js/cloud/AndroidFileSystem.js"></script>
+		<script type="text/javascript" src="../../js/publicProtocol.js"></script>
 		<script type="text/javascript">
 			mui.init();
 			mui.plusReady(function() {
-				//---初始化--start---
-				events.preload('storage_main_choose.html'); //预加载选择云存储的文件
-				events.preload('storage_transport.html'); //预加载传输列表
 
-				//				console.log('选择上传的文件');
 				var main = plus.webview.currentWebview(); //获取当前窗体对象
 				var subData = null; //记录从父页面获取的数据
 				var pid = ''; //文件的上层ID
 				var showFolderId = ''; //当前显示的文件夹id
 				var folderList = []; //目录数组，每打开一个目录，将该目录保存
 				var upFile = null; //记录上传的文件
-				//				var upFile = {
-				//					folderid: '', //所属文件夹id
-				//					fileid: '', //文件元素id
-				//					path: '', //本地路径
-				//					fname: '', //本地文件名
-				//					metadata: '', //文件信息
-				//				}
-
-				createFolder(); //在程序中创建utid的文件夹和对应的上传下载文件夹
-				//---初始化--end---
-
-				//---滑动start---
 				mui(".mui-scroll-wrapper").scroll({
 					scrollY: true, //是否竖向滚动
 					scrollX: false, //是否横向滚动
@@ -166,32 +145,9 @@
 					deceleration: 0.0006, //阻尼系数,系数越小滑动越灵敏
 					bounce: true, //是否启用回弹
 				});
-				//---滑动end---
-
-				//在程序中创建utid的文件夹和对应的上传下载文件夹
-				window.addEventListener('createFolder', function(e) {
-					createFolder(); //在程序中创建utid的文件夹和对应的上传下载文件夹
-				});
-				//初始化
-				window.addEventListener('init', function(e) {
-					subData = e.detail.data; //接收页面传入的参数值
-					console.log('subData:' + JSON.stringify(subData));
-					document.getElementById("yunpath").innerHTML = subData.title;
-					pid = subData.fid;
-					init();
-				});
-
-				//选择上传的路径
-				window.addEventListener('chooseFolder', function(e) {
-					var folder = e.detail.data; //接收页面传入的参数值
-					console.log('chooseFolder:' + JSON.stringify(folder));
-					document.getElementById("yunpath").innerHTML = folder.title;
-					pid = folder.fid;
-				});
 
 				//返回按钮
 				mui.back = function() {
-
 					folderList.pop(); //清除最后一个历史记录
 					if(folderList.length == 0) {
 						//mui.back();
@@ -401,6 +357,8 @@
 							}
 						});
 					}
+
+					init();
 				});
 
 				/**
@@ -561,29 +519,29 @@
 					//directoryReader.readEntries( succesCB, errorCB );
 					var directoryReader = entry.createReader();
 					directoryReader.readEntries(function(succesCB) {
-						//succesCB:文件或目录对象的引用,可指向文件或目录对象（DirectoryEntry|FileEntry）
-						console.log("获取当前目录中的所有文件和子目录成功");
-						mui.each(succesCB, function(index, element) {
-							//console.log("directoryReader:" + JSON.stringify(element));
-							additem(URL, element)
+							//succesCB:文件或目录对象的引用,可指向文件或目录对象（DirectoryEntry|FileEntry）
+							console.log("获取当前目录中的所有文件和子目录成功");
+							mui.each(succesCB, function(index, element) {
+								//console.log("directoryReader:" + JSON.stringify(element));
+								additem(URL, element)
+							});
+							if(succesCB.length == 0) {
+								mui.toast('没有文件');
+							}
+							//---滑动start---
+							mui(".mui-scroll-wrapper").scroll({
+								scrollY: true, //是否竖向滚动
+								scrollX: false, //是否横向滚动
+								indicators: true, //是否显示滚动条
+								deceleration: 0.0006, //阻尼系数,系数越小滑动越灵敏
+								bounce: true, //是否启用回弹
+							});
+							//---滑动end---
+						},
+						function(errorCB) {
+							mui.toast("读取当前目录中的所有文件和子目录失败 " + errorCB.message);
+							console.log("获取当前目录中的所有文件和子目录失败: " + JSON.stringify(errorCB));
 						});
-						if(succesCB.length == 0) {
-							mui.toast('没有文件');
-						}
-						//---滑动start---
-						mui(".mui-scroll-wrapper").scroll({
-							scrollY: true, //是否竖向滚动
-							scrollX: false, //是否横向滚动
-							indicators: true, //是否显示滚动条
-							deceleration: 0.0006, //阻尼系数,系数越小滑动越灵敏
-							bounce: true, //是否启用回弹
-						});
-						//---滑动end---
-},
-function(errorCB) {
-	mui.toast("读取当前目录中的所有文件和子目录失败 " + errorCB.message);
-						console.log("获取当前目录中的所有文件和子目录失败: " + JSON.stringify(errorCB));
-					});
 				}
 
 				/**
