--- a/JiaoBaoYun-hb/html/cloud/storage_upload_choose.html
+++ b/JiaoBaoYun-hb/html/cloud/storage_upload_choose.html
@@ -1,3 +1,8 @@
+<!--
+	作者：444811716@qq.com
+	时间：2017-06-19
+	描述：选择上传的文件
+-->
 <!doctype html>
 <html>
 
@@ -9,34 +14,79 @@
 		<link rel="stylesheet" href="../../css/utils/common.css" />
 		<link rel="stylesheet" href="../../css/iconfont/iconfont.css" />
 		<link rel="stylesheet" href="../../css/cloud/file.css" />
-		<script src="../../js/mui.min.js"></script>
-		<script type="text/javascript" src="../../js/utils/events.js"></script>
-		<script type="text/javascript" src="../../js/cloud/AndroidFileSystem.js"></script>
-		<script type="text/javascript" src="../../js/storageKeyName.js"></script>
-		<script type="text/javascript" src="../../js/utils/compress.js"></script>
 		<style type="text/css">
 			body,
 			.mui-content {
 				background: white;
 			}
 
-			.mui-media-object {
-				font-size: 42px;
+			nav {
+				background-color: #383E4E !important;
 			}
 
-			.mui-media-object {
-				height: 42px;
-				width: 42px;
+			.bar-tab-div {
+				margin: 5px;
 			}
 
-			#file {
-				position: absolute;
+			.bar-tab-div .mui-pull-left,
+			.bar-tab-div .mui-pull-right {
+				width: 45%;
+			}
+
+			.bar-tab-div .mui-pull-left div:first-child {
+				color: white;
+				margin-left: 10%;
+			}
+
+			.bar-tab-div .mui-pull-left button {
 				width: 100%;
-				bottom: 81px;
+				margin-bottom: 15px;
+				margin-left: 5%;
+				background: #7F8594;
+				border-color: #7F8594;
+				height: 40px;
 			}
 
-			.campion {
-				line-height: 45px;
+			.bar-tab-div .mui-pull-left button img {
+				width: 20%;
+				height: 20px;
+			}
+
+			.bar-tab-div .mui-pull-left button div {
+				width: 80%;
+				text-align: center;
+			}
+
+			.bar-tab-div .mui-pull-right button {
+				width: 100%;
+				margin-bottom: 15px;
+				margin-left: -5%;
+				background: #636770;
+				border-color: #636770;
+				height: 40px;
+			}
+
+			.mui-backdrop {
+				background-color: rgba(0, 0, 0, 0.03);
+			}
+
+			.mui-popover-arrow {
+				display: none;
+			}
+
+			.mui-popover {
+				width: 100%;
+			}
+
+			.mui-popover.mui-active {
+				left: 0px !important;
+				height: 200px;
+			}
+
+			.popover-background {
+				width: 100% !important;
+				background-color: wheat;
+				height: 100%;
 			}
 		</style>
 	</head>
@@ -44,80 +94,79 @@
 	<body>
 		<header class="mui-bar mui-bar-nav">
 			<a class="mui-action-back mui-icon mui-icon-left-nav mui-pull-left"></a>
-			<h1 class="mui-title">选择文件的方式</h1>
+			<h1 class="mui-title">选择文件</h1>
+			<div id="addfiles" class="title-text-pull-right">添加</div>
 		</header>
-		<nav class="mui-bar mui-bar-tab" style="background: #383E4E;">
-			<div style="margin: 5px;">
-				<div class="mui-pull-left" style="width: 45%;">
-					<div style="color: white;margin-left: 10%;">选择上传的位置</div>
-					<button id="choose" type="button" class="mui-btn mui-btn-blue" style="width: 100%;margin-bottom: 15px;margin-left: 5%;background: #7F8594;border-color: #7F8594;height: 40px;">
-						<img class="mui-pull-left" src="../../image/cloud/A_folder.png"style="width: 20%;height: 20px;" />
-						<div id="yunpath" class="mui-ellipsis mui-pull-right"style="width: 80%;text-align: center;"></div>
+		<nav class="mui-bar mui-bar-tab">
+			<div class="bar-tab-div">
+				<div class="mui-pull-left">
+					<div>选择上传的位置</div>
+					<button id="choose" type="button" class="mui-btn mui-btn-blue">
+						<img class="mui-pull-left" src="../../image/cloud/A_folder.png"/>
+						<div id="yunpath" class="mui-ellipsis mui-pull-right"></div>
 					</button>
 				</div>
-				<div class="mui-pull-right" style="width: 45%;">
+				<div class="mui-pull-right">
 					<br />
-					<button id="upload" type="button" class="mui-btn mui-btn-blue" style="width: 100%;margin-bottom: 15px;margin-left: -5%;background: #636770;border-color: #636770;height: 40px;">上传</button>
+					<button id="upload" type="button" class="mui-btn mui-btn-blue">上传</button>
 				</div>
 			</div>
 		</nav>
-
-		<div class="mui-content mui-scroll-wrapper ">
+		<div class="mui-content mui-scroll-wrapper">
 			<div class="mui-scroll">
-				<ul class="mui-table-view">
-					<li class="mui-table-view-cell mui-media" value="0">
-						<span class="mui-media-object mui-icon iconfont icon-xiangce mui-pull-left" style="color: #35b87f;  font-size:38px; margin-top:4px"></span>
-						<div class="mui-media-body campion">
-							相册
-						</div>
-					</li>
-					<li class="mui-table-view-cell mui-media" value="1">
-						<span class="mui-media-object mui-icon iconfont icon-xiangji mui-pull-left" style="color: #5B99EE;"></span>
-						<div class="mui-media-body campion">
-							拍照
-						</div>
-					</li>
-					<li id="local" class="mui-table-view-cell mui-media" value="2" style="display: none;">
-						<!--<img class="mui-media-object mui-pull-left" src="../../image/cloud/A_folder.png">-->
-						<span class="mui-media-object mui-icon iconfont icon-allfolder mui-pull-left" style="color: #FFD33C;"></span>
-						<div class="mui-media-body campion">
-							从本地文件
-						</div>
+				<ul class="mui-table-view" id="filesList">
+					<li class="mui-table-view-cell" value="2">
+						从本地选择
 					</li>
 				</ul>
 			</div>
-			<ul class="mui-table-view" id="file">
-				<!--<li class="mui-table-view-cell mui-media">
-					<span class="mui-media-object mui-pull-right mui-icon mui-icon-closeempty"></span>
-					<span class="mui-media-object mui-icon iconfont icon-imge mui-pull-left"></span>
-					<div class="mui-media-object mui-pull-left" style="overflow: hidden;">
-						<img style="width: 100%;" onload="if(this.offsetHeight<=this.offsetWidth){if(this.offsetHeight<42){this.style.height='42px';this.style.width='initial';}this.style.marginLeft=-parseInt((this.offsetWidth-42)/2)+'px';}else{this.style.marginTop=-parseInt((this.offsetHeight-42)/2)+'px';}" src="https://ss0.bdstatic.com/70cFvHSh_Q1YnxGkpoWK1HF6hhy/it/u=2277942808,1417432970&fm=23&gp=0.jpg">
-					</div>
-					<div class="mui-media-body">
-						<div class="mui-ellipsis">文件名字</div>
-					</div>
-				</li>-->
-			</ul>
+		</div>
+		<div id="popover" class="mui-popover">
+			<div id="popover_bg" class="popover-background">
+			</div>
 		</div>
 
+		<script src="../../js/mui.min.js"></script>
+		<script type="text/javascript" src="../../js/utils/events.js"></script>
+		<script type="text/javascript" src="../../js/cloud/AndroidFileSystem.js"></script>
+		<script type="text/javascript" src="../../js/storageKeyName.js"></script>
+		<script type="text/javascript" src="../../js/utils/compress.js"></script>
 		<script type="text/javascript">
+			var main; //当前webview对象
+			var chooseData = {
+				files: []
+			}; //当前页面的数据
+
 			mui.init();
 			mui.plusReady(function() {
-				console.log('选择文件的方式');
-				var main = plus.webview.currentWebview(); //获取当前窗体对象
-				var subData = null; //记录从父页面获取的数据
-				var upFile = null; //记录上传的文件
-				var pid = ''; //文件的上层ID
-				if(mui.os.android) {
-					document.getElementById("local").style.display = 'block';
-				}
+				initData();
+				initListener();
+				initPopover();
+			});
 
-				//初始化
-				window.addEventListener('init', function(e) {
-					subData = e.detail.data; //接收页面传入的参数值
-					console.log('subData:' + JSON.stringify(subData));
-					document.getElementById("yunpath").innerHTML = subData.title;
-					pid = subData.fid;
+			/**
+			 * 初始化数据
+			 */
+			function initData() {
+				main = plus.webview.currentWebview(); //获取当前窗体对象
+				console.log(main.id + " " + JSON.stringify(main.data));
+				chooseData.pid = main.data.pid;
+				chooseData.pname = main.data.pname;
+				if(main.data.pid == 0) {
+					chooseData.pname = "我的教宝云盘";
+				}
+				document.getElementById("yunpath").innerHTML = chooseData.pname;
+			}
+
+			/**
+			 * 初始化监听
+			 */
+			function initListener() {
+
+				//添加文件
+				document.getElementById('addfiles').addEventListener('tap', function() {
+					console.log("添加文件");
+					mui('#popover').popover('toggle');
 				});
 
 				//选择上传的路径
@@ -127,11 +176,6 @@
 					document.getElementById("yunpath").innerHTML = folder.title;
 					pid = folder.fid;
 				});
-
-				//返回按钮
-				mui.back = function() {
-					plus.webview.hide(main, 'pop-out');
-				}
 
 				//相册，拍照，从本地选择
 				mui('.mui-table-view').on('tap', '.mui-table-view-cell', function() {
@@ -144,12 +188,8 @@
 							camera();
 							break;
 						case '2': //从本地选择
-							events.fireToPageWithData('storage_upload.html', 'init', {
-								fid: '0', //文件id,顶层0
-								showTop: false, //是否显示顶部的上传，传输列表，文件夹，如果是选择云盘上的文件夹则为false
-								title: '我的教宝云盘', //标题名
-								top: subData.top //顶层文件和文件夹的数据
-							});
+							console.log("从本地选择");
+							events.openNewWindowWithData('storage_upload.html', {});
 							break;
 					}
 				});
@@ -169,7 +209,7 @@
 
 				//上传选择的文件
 				document.getElementById('upload').addEventListener('tap', function() {
-					if(upFile != null) {
+					if(chooseData.files.length != 0) {
 						//console.log("upload:" + JSON.stringify(upFile));
 						//跳转到传输列表
 						events.fireToPageWithData('storage_transport.html', 'addUpload', {
@@ -201,185 +241,55 @@
 						}
 					});
 				})
+			}
 
-				/**
-				 * 将上传按钮颜色设置为默认颜色
-				 */
-				function changeUpBtnColorToDefault() {
-					document.getElementById('upload').style.background = '#636770';
-					document.getElementById('upload').style.border = '#636770';
-				}
+			/*
+			 * 初始化选择文件方式弹框
+			 */
+			function initPopover() {
+				document.getElementById("popover").style.height = plus.screen.resolutionHeight - plus.navigator.getStatusbarHeight() - 45 + "px";
+				document.getElementById("popover").style.top = 45 + "px"
+			}
 
-				/**
-				 * 将上传按钮颜色设置为蓝色
-				 */
-				function changeUpBtnColor() {
-					document.getElementById('upload').style.background = '#4DA3F5';
-					document.getElementById('upload').style.border = '#4DA3F5';
-				}
-
-				//拍照
-				function camera() {
-					var cmr = plus.camera.getCamera();
-					var res = cmr.supportedImageResolutions[0];
-					var fmt = cmr.supportedImageFormats[0];
-					cmr.captureImage(function(capturedFile) {
-							var wd = events.showWaiting('处理中...');
-							console.log('拍照成功,图片的路径为：' + capturedFile);
-							getFile(capturedFile, wd);
-						},
-						function(error) {
-							// 拍照失败的回调
-							var code = error.code; // error.code（Number类型）获取错误编码
-							var message = error.message; // error.message（String类型）获取错误描述信息。
-							if(mui.os.ios) {
-								if(code !== 2) {
-									mui.toast('拍照失败 ' + '错误编码 ' + code + ' 描述信息 ' + message);
-									console.log('拍照失败！' + JSON.stringify(error));
-								} else {
-									console.log('未拍取图片');
-								}
-							} else if(mui.os.android) {
-								if(code !== 11) {
-									mui.toast('拍照失败 ' + '错误编码 ' + code + ' 描述信息 ' + message);
-									console.log('拍照失败！' + JSON.stringify(error));
-								} else {
-									console.log('未拍取图片:' + JSON.stringify(error));
-								}
-							}
-						}, {
-							format: fmt
-						}
-					);
-				}
-
-				//相册
-				function pick() {
-					plus.gallery.pick(function(file) {
-						var wd = events.showWaiting('处理中...');
-						console.log('从相册选取图片成功,图片的路径为：' + file);
-						getFile(file, wd);
-					}, function(error) {
-						//从相册选取图片失败的回调
-						var code = error.code; // 错误编码
-						var message = error.message; // 错误描述信息
-						if(mui.os.ios) {
-							if(code != -2) {
-								mui.toast('从相册选取图片失败 ' + '错误编码 ' + code + '描述信息 ' + message);
-								console.log('从相册选取图片失败 ' + JSON.stringify(error));
-							} else {
-								console.log('未选取图片');
-							}
-						} else if(mui.os.android) {
-							if(code != 12) {
-								mui.toast('从相册选取图片失败 ' + '错误编码 ' + code + '描述信息 ' + message);
-								console.log('从相册选取图片失败 ' + JSON.stringify(error));
-							} else {
-								console.log('未选取图片:' + JSON.stringify(error));
-							}
-						}
-					});
-				}
-
-				/**
-				 * 获取文件
-				 * @param {Object} URL 文件路径
-				 */
-				function getFile(URL, wd) {
-					plus.io.resolveLocalFileSystemURL(URL, function(entry) {
-						var filePath = entry.toLocalURL();
-						//请求成功的回调
-						console.log("请求文件系统成功" + JSON.stringify(entry.name));
-						entry.getMetadata(function(succesCB) {
-
-							console.log("获取目文件的属性成功");
-							console.log("getMetadata:" + JSON.stringify(succesCB));
-							console.log("readFileSize：" + AndroidFileSystem.readSize(succesCB.size));
-							//限制50M
-							if(succesCB.size <= (50 * 1024 * 1024)) {
-								if(upFile == null) { //当前页面没选上传的文件
-									upFile = { //记录上传的文件
-										path: filePath, //本地路径
-										fname: entry.name, //本地文件名
-										metadata: succesCB //文件信息
-									}
-									compress.compressImageTo_1MB({
-										path: filePath,
-									}, function(event) {
-										changeUpBtnColor();
-										addUpFile(entry.name, event.target);
-										wd.close();
-									}, function(error) {
-										changeUpBtnColor();
-										addUpFile(entry.name);
-										wd.close();
-									});
-								} else {
-									var btnArray = ['否', '是'];
-									mui.confirm('只能选择一个上传文件，是否覆盖？', '提示', btnArray, function(e) {
-										if(e.index == 1) { //是
-											upFile = { //记录上传的文件
-												path: filePath, //本地路径
-												fname: entry.name, //本地文件名
-												metadata: succesCB //文件信息
-											}
-											compress.compressImageTo_1MB({
-												path: filePath,
-											}, function(event) {
-												changeUpBtnColor();
-												addUpFile(entry.name, event.target);
-												wd.close();
-											}, function(error) {
-												changeUpBtnColor();
-												addUpFile(entry.name);
-												wd.close();
-											});
-										}
-									});
-								}
-							} else {
-								mui.toast('上传文件不得大于50M');
-							}
-						}, function(errorCB) {
-							mui.toast('读取文件信息失败 ' + errorCB.message);
-							console.log("获取文件的属性失败: " + JSON.stringify(errorCB));
-						});
-					}, function(errorCB) {
-						//请求失败的的回调
-						if(errorCB.code == 12) {
-							mui.toast('文件不存在');
-							console.log("请求文件系统失败 " + errorCB.message);
-						} else {
-							mui.toast('读取文件失败 ' + errorCB.message);
-							console.log("请求文件系统失败: " + JSON.stringify(errorCB));
-						}
-					});
-				}
-
-				/**
-				 * 增加一项上传的文件
-				 * @param {Object} fName 文件名
-				 * @param {Object} fPath 文件路径
-				 */
-				function addUpFile(fName, fPath) {
-					var li = document.createElement('li');
-					li.className = 'mui-table-view-cell mui-media';
-					var html1 = '';
-					html1 = '<span class="mui-media-object mui-icon iconfont icon-imge mui-pull-left"></span>';
-					if(fPath != undefined) {
-						html1 = '<div class="mui-media-object mui-pull-left" style="overflow: hidden;">\
+			/**
+			 * 增加一项上传的文件
+			 * @param {Object} fName 文件名
+			 * @param {Object} fPath 文件路径
+			 */
+			function addUpFile(fName, fPath) {
+				var li = document.createElement('li');
+				li.className = 'mui-table-view-cell mui-media';
+				var html1 = '';
+				html1 = '<span class="mui-media-object mui-icon iconfont icon-imge mui-pull-left"></span>';
+				if(fPath != undefined) {
+					html1 = '<div class="mui-media-object mui-pull-left" style="overflow: hidden;">\
 									<img style="width: 100%;" onload="if(this.offsetHeight<=this.offsetWidth){if(this.offsetHeight<42){this.style.height=\'42px\';this.style.width=\'initial\';}this.style.marginLeft=-parseInt((this.offsetWidth-42)/2)+\'px\';}else{this.style.marginTop=-parseInt((this.offsetHeight-42)/2)+\'px\';}" src="' + fPath + '">\
 								</div>';
-						//html1 = '<div style="overflow: hidden;"><img class="mui-media-object mui-pull-left" src="' + fPath + '"></div>';
-					}
-					li.innerHTML = '<span id="closeempty" class="mui-media-object mui-pull-right mui-icon mui-icon-closeempty"></span>\
+					//html1 = '<div style="overflow: hidden;"><img class="mui-media-object mui-pull-left" src="' + fPath + '"></div>';
+				}
+				li.innerHTML = '<span id="closeempty" class="mui-media-object mui-pull-right mui-icon mui-icon-closeempty"></span>\
 									' + html1 + '\
 									<div class="mui-media-body">\
 										<div class="mui-ellipsis">' + fName + '</div>\
 									</div>'
-					document.getElementById("file").appendChild(li);
-				}
-			});
+				document.getElementById("file").appendChild(li);
+			}
+
+			/**
+			 * 将上传按钮颜色设置为默认颜色
+			 */
+			function changeUpBtnColorToDefault() {
+				document.getElementById('upload').style.background = '#636770';
+				document.getElementById('upload').style.border = '#636770';
+			}
+
+			/**
+			 * 将上传按钮颜色设置为蓝色
+			 */
+			function changeUpBtnColor() {
+				document.getElementById('upload').style.background = '#4DA3F5';
+				document.getElementById('upload').style.border = '#4DA3F5';
+			}
 		</script>
 	</body>
 
