--- a/JiaoBaoYun-hb/html/cloud/storage_upload.html
+++ b/JiaoBaoYun-hb/html/cloud/storage_upload.html
@@ -71,7 +71,7 @@
 	<body>
 		<header class="mui-bar mui-bar-nav">
 			<a class="mui-action-back mui-icon mui-icon-left-nav mui-pull-left"></a>
-			<h1 class="mui-title">从本地上传文件</h1>
+			<h1 class="mui-title">从本地选择</h1>
 		</header>
 		<div class="mui-content">
 			<div id="slider" class="mui-slider">
