--- a/JiaoBaoYun-hb/html/quan/class_space.html
+++ b/JiaoBaoYun-hb/html/quan/class_space.html
@@ -41,6 +41,11 @@
 				</div>
 			</div>
 		</div>
+		<div id="videoPopover" class="mui-popover">
+			<video id="video" style="position: absolute;z-index: 999;">
+				您的浏览器不支持 video 标签。
+			</video>
+		</div>
 		<!--点赞图标点击后的弹出框-->
 		<div id="popover" class="mui-popover">
 			<ul class="mui-table-view">
@@ -73,6 +78,7 @@
 		<script src="../../js/utils/urlBrief.js"></script>
 		<!--班级空间js-->
 		<script src="../../js/quan/class_space.js"></script>
+		<script type="text/javascript" src="../../js/utils/showvideoutil.js"></script>
 	</body>
 
 </html>
