--- a/JiaoBaoYun-hb/html/cloud/storage_upload.html
+++ b/JiaoBaoYun-hb/html/cloud/storage_upload.html
@@ -170,7 +170,10 @@
 					});
 					if (checkedValues.length > 0) {
 						console.log('传到安琪界面的数据：'+JSON.stringify(checkedValues))
-						events.fireToPageWithData('storage_upload_choose.html','chose-files',checkedValues)
+						events.fireToPageWithData('storage_upload_choose.html','chose-files',{
+							dataInfo:checkedValues,
+							local:1
+						})
 						mui.back();
 					} else {
 						mui.alert('你还没选择文件');
